# elements-book.github.io

./: .gitignore  LICENSE  README.md  elements.cabal  stack.yaml
css/: cormorant-garamond.css  cormorant-sc.css  eb-garamond.css  lanyon.css  roboto.css
docs/: 404.html  atom.xml  index.html  rss.xml
docs/blog/: page1.html
docs/css/: cormorant-garamond.css  cormorant-sc.css  eb-garamond.css  lanyon.css  poole.css  roboto.css
docs/fonts/: eb-garamond-v19-greek-ext_greek-700.eot  eb-garamond-v19-greek-ext_greek-italic.eot
docs/pages/: About.html  Biographies.html  Contact.html  Errata.html  Reviews.html  Talks.html
docs/posts/: 2018-06-02-talbot.html  2022-03-12-zen.html  2023-02-09-prose.html
fonts/: LICENSE_Roboto_Apache.txt  eb-garamond-v19-greek-ext_greek-700italic.eot  eb-garamond-v19-greek-ext_greek-regular.eot
pages/: About.md  Biographies.md  Contact.md  Errata.md  Reviews.md  Talks.md
pandoc/: crossrefOptions.yaml  header.tex  htmlOptions.yaml  imgGenOptions.yaml  latexOptions.yaml  literature.bib  macros.tex  pdfGenOptions.yaml
posts/: 2018-06-02-talbot.md  2022-03-12-zen.md  2023-02-09-prose.md
src/: Compilers.hs  Site.hs  XMLWalker.hs
templates/: blog.html  default.html  head.html  index.html  post.html  sidebar.html  tag.html
