name:                elements
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://dom-verity.github.io/
license:             MIT
license-file:        LICENSE
author:              Dom Verity
maintainer:          dom.verity@gmail.com
copyright:           Copyright ©2022 Emily Riehl and Dominic Verity
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable elements
  main-is:           Site.hs
  other-modules:     Compilers
                  ,  XMLWalker

  default-language:  Haskell2010
  ghc-options:       -threaded
  hs-source-dirs:    src
  build-depends:     base >= 4.7 && < 5
                  ,  hakyll == 4.15.1.*
                  ,  blaze-html == 0.9.1.*
                  ,  containers == 0.6.5.*
                  ,  filepath == 1.4.2.*
                  ,  directory == 1.3.6.*
                  ,  pandoc == 2.14.0.*
                  ,  pandoc-types == 1.22.1
                  ,  pandoc-crossref == 0.3.12.*
                  ,  process == 1.6.13.*
                  ,  text == 1.2.4.*
                  ,  bytestring == 0.10.12.*
                  ,  mtl == 2.2.2
                  ,  xml-conduit == 1.9.1.*
                  ,  binary == 0.8.8.*
